# ChangeLog for media-libs/xine-lib
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.46 2003/03/08 20:46:19 lostlogic Exp $

*xine-lib-1_beta8 (08 Mar 2003)

  08 Mar 2003; Brandon Low <lostlogic@gentoo.org> xine-lib-1_beta8.ebuild:
  Bug Fix

*xine-lib-1_beta7 (07 Mar 2003)

  08 Mar 2003; Brandon Low <lostlogic@gentoo.org> :
  Removed ... it b0rk

  07 Mar 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*xine-lib-1_beta6 (25 Feb 2003)

  07 Mar 2003; Arcady Genkin <agenkin@gentoo.org> :
  Fixed installation problem for portage >=2.0.47 (bug #16841).
  Filter out k6 optimization flags (bug #16085).
  Refuse to compile if libxine.so.0 is present (bug #15081).

  27 Feb 2003; Mark Guertin <gerk@gentoo.org> xine-lib-1_beta6.ebuild :
  set ~ppc in keywords

  25 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump to 1-beta6.

*xine-lib-1_beta5-r1 (22 Feb 2003)

  07 Mar 2003; Arcady Genkin <agenkin@gentoo.org> :
  Fixed installation problem for portage >=2.0.47 (bug #16841).
  Filter out k6 optimization flags (bug #16085).

  22 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump to 1-beta5.
  Added dependency on xvid.
  Added dependency on libfame.
  Removed hack for installing xine-ui_logo.mpv, since it seems to have
  moved into xine-ui.
  Fixed location of the installed fonts (thanks Theofilos Intzoglou
  <oscar10@yifan.net> bug #16112).

*xine-lib-1_beta4 (28 Jan 2003)

  07 Mar 2003; Arcady Genkin <agenkin@gentoo.org> :
  Fixed installation problem for portage >=2.0.47 (bug #16841).
  Filter out k6 optimization flags (bug #16085).
  Refuse to compile if libxine.so.0 is present (bug #15081).

  13 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Removed dependency on kdelibs (bug 15595).

  01 Feb 2003; Arcady Genkin <agenkin@gentoo.org> :
  Depending on >=flac-1.0.4 since compilation breaks with 1.0.1.
	